--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
-
-  "type": "module",
-
+  "name": "vminterfaces",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AnderRedna/VmInterfaces.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/AnderRedna/VmInterfaces/issues"
+  },
+  "homepage": "https://github.com/AnderRedna/VmInterfaces#readme",
   "dependencies": {
-
-    "jquery": "^3.6.0",
-
-    "require": "^0.4.9"
-
+    "express": "^4.18.1",
+    "socket.io": "^4.5.1"
   }
-
 }
-
